# _viewer

./: .gitignore  Cargo.toml  README.adoc  index.html  taplo.toml
.github/workflows/: ci.yml  pages.yml  rust.yml  typos.yml
ftl/en/: pane_settings.ftl  properties.ftl  settings.ftl
ftl/ru/: pane_settings.ftl  properties.ftl
src/: lib.rs  localization.rs  main.rs  utils.rs
src/app/: cloud copy.rs  cloud.rs  data.rs  metadata.rs  mod copy.rs  mod.rs  mqtt.rs
src/app/computers/: mod.rs  plot.rs  table.rs
src/app/panes/: behavior.rs  mod.rs  pane.rs  plot.rs  settings.rs  table.rs  view.rs
src/app/panes/plot/: mod.rs  settings.rs
src/app/panes/settings/: mod.rs  plot.rs  table.rs
src/app/panes/table/: mod.rs
src/export/: mod copy.rs  xlsx.rs
src/utils/: mod.rs
