[package]
name = "viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.89"
eframe = { version = "0.29.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.29.1"
egui-phosphor = "0.7.3"
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_extras = "0.29.1"
egui_plot = "0.29.0"
egui_tiles = "0.10.1"
fluent = "0.16.1"
fluent_content = "0.0.5"
futures = "0.3.31"
polars = { version = "0.43.1", default-features = false, features = [
    "dtype-array",      # ?
    "dtype-datetime",
    "dtype-struct",     # ?
    "dynamic_group_by",
    "fmt_no_tty",
    "lazy",
    "rolling_window",
    "round_series",
    "serde",
    "temporal",
] }
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
time = { version = "0.3.36", features = [
    "formatting",
    "local-offset",
    "macros",
    "parsing",
    "serde",
] }
tokio = { version = "1.40.0", features = ["rt"] }
tracing = "0.1.40"
unic-langid = { version = "0.9.5", features = ["macros"] }

google_drive = { git = "https://github.com/ippras-blc/google_drive" }
timed = { git = "https://github.com/ippras-blc/timed", features = ["serde"] }

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["tokio"] }
rumqttc = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
ewebsock = "0.7.0"
getrandom = { version = "0.2.15", features = ["js"] }
poll-promise = { version = "0.3.0", features = ["web"] }
tokio_with_wasm = { version = "0.7.1", features = ["rt"] }
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"                                         # to access the DOM (to hide the loading text)
# rumqttc = { version = "0.24.0", features = ["websocket"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
