[package]
name = "viewer"
version = "0.1.0"
authors = ["Kazakov Giorgi Vladimirovich", "Sidorov Roman Alexandrovich"]
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arrow = "55.0.0"
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
egui = "0.31.1"
egui-phosphor = "0.9.0"
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_extras = "0.31.1"
egui_l20n = { git = "https://github.com/kgv/egui_l20n", features = ["macros"] }
egui_plot = "0.32.1"
egui_table = "0.3.0"
egui_tiles = "0.12.0"
egui_tiles_ext = { git = "https://github.com/kgv/egui_tiles_ext" }
futures = "0.3.31"
indexmap = "2.9.0"
metadata = { git = "https://github.com/ippras/metadata" }
object_store = { version = "0.12.0", features = ["http", "serde"] }
parquet = { version = "55.0.0", features = ["arrow", "async", "object_store"] }
polars = { version = "0.46.0", default-features = false, features = [
    "dtype-datetime",
    "dtype-struct",
    "dtype-u16",
    "dynamic_group_by",
    "fmt_no_tty",
    "lazy",
    "parquet",
    "rolling_window",
    "round_series",
    "serde",
    "temporal",
] }
ron = "0.10.1"
rust_xlsxwriter = { version = "0.84.0", features = ["chrono", "wasm"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
unic-langid = { version = "0.9.5", features = ["macros"] }

# google_drive = { git = "https://github.com/ippras-blc/google_drive" }

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["tokio"] }
rumqttc = "0.24.0"
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
ewebsock = "0.8.0"
js-sys = "0.3.77"
poll-promise = { version = "0.3.0", features = ["web"] }
tokio = { version = "1.44.2", features = ["macros", "rt", "sync", "time"] }
tokio_with_wasm = { version = "0.8.2", features = [
    "macros",
    "rt",
    "sync",
    "time",
] }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Blob", "BlobPropertyBag", "Url"] }
base64 = "0.22.1"
# rumqttc = { version = "0.24.0", features = ["websocket"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
